==> mrehkopf/sd2snes/src/stm32f4xx/usbhw.c <==
#include <arm/bits.h>
#include <string.h>
#include "config.h"
#include "uart.h"
#include "usb.h"
#include "usbcfg.h"
#include "usbreg.h"
#include "usbhw.h"
#include "usbcore.h"
#include "usbuser.h"
#define USB_NUM_EP  (4)
#define EP_MSK_CTRL 0x0001      /* Control Endpoint Logical Address Mask */
#define EP_MSK_BULK 0xC924      /* Bulk Endpoint Logical Address Mask */
#define EP_MSK_INT  0x4492      /* Interrupt Endpoint Logical Address Mask */
#define EP_MSK_ISO  0x1248      /* Isochronous Endpoint Logical Address Mask */

void USB_Init (void) {

  RCC->AHB2ENR |= RCC_AHB2ENR_OTGFSEN_Msk;

  USB_OTG_FS_GLOBAL->GUSBCFG |= USB_OTG_GUSBCFG_PHYSEL;
  while(!(USB_OTG_FS_GLOBAL->GRSTCTL & USB_OTG_GRSTCTL_AHBIDL));

  USB_OTG_FS_GLOBAL->GCCFG = USB_OTG_GCCFG_PWRDWN
                           | (USB_OTG_FS_GLOBAL->GCCFG & 0xffff);
  USB_OTG_FS_GLOBAL->GAHBCFG = USB_OTG_GAHBCFG_GINT
                      | USB_OTG_GAHBCFG_PTXFELVL;
  USB_OTG_FS_GLOBAL->GUSBCFG = USB_OTG_GUSBCFG_FDMOD
                      | (0 << USB_OTG_GUSBCFG_TOCAL_Pos)
                      | (6 << USB_OTG_GUSBCFG_TRDT_Pos);

  USB_OTG_FS_DEVICE->DIEPMSK = 0;
  USB_OTG_FS_DEVICE->DOEPMSK = 0;
  USB_OTG_FS_DEVICE->DAINTMSK = 0;

  for (int i = 0; i < USB_NUM_EP; i++) {
    if(USB_OTG_FS_EP->IN_Endpoint[i].DIEPCTL & USB_OTG_DIEPCTL_EPENA) {
      if(i == 0) {
        USB_OTG_FS_EP->IN_Endpoint[i].DIEPCTL = USB_OTG_DIEPCTL_SNAK;
      } else {
        USB_OTG_FS_EP->IN_Endpoint[i].DIEPCTL = USB_OTG_DIEPCTL_SNAK | USB_OTG_DIEPCTL_EPDIS;
      }
    } else {
      USB_OTG_FS_EP->IN_Endpoint[i].DIEPCTL = 0;
    }

    if(USB_OTG_FS_EP->OUT_Endpoint[i].DOEPCTL & USB_OTG_DOEPCTL_EPENA) {
      if(i == 0) {
        USB_OTG_FS_EP->OUT_Endpoint[i].DOEPCTL = USB_OTG_DOEPCTL_SNAK;
      } else {
        USB_OTG_FS_EP->OUT_Endpoint[i].DOEPCTL = USB_OTG_DOEPCTL_SNAK | USB_OTG_DOEPCTL_EPDIS;
      }
    } else {
      USB_OTG_FS_EP->OUT_Endpoint[i].DOEPCTL = 0;
    }
    doeptsiz[i] = USB_OTG_FS_EP->OUT_Endpoint[i].DOEPTSIZ = 0;
    USB_OTG_FS_EP->OUT_Endpoint[i].DOEPINT |= USB_OTG_DOEPINT_NAK
                                            | USB_OTG_DIEPINT_BERR // XXX CMSIS is missing DOEPINT.BERR
                                            | USB_OTG_DOEPINT_OUTPKTERR
                                            | (1 << 5)             // XXX CMSIS is missing DOEPINT.STSPHSRX
                                            | USB_OTG_DOEPINT_OTEPDIS
                                            | USB_OTG_DOEPINT_STUP
                                            | USB_OTG_DOEPINT_EPDISD
                                            | USB_OTG_DOEPINT_XFRC;
  }

  USB_OTG_FS_GLOBAL->GINTSTS = USB_OTG_GINTSTS_MMIS
                             | USB_OTG_GINTSTS_USBRST
                             | USB_OTG_GINTSTS_ENUMDNE
                             | USB_OTG_GINTSTS_ESUSP
                             | USB_OTG_GINTSTS_USBSUSP
                             | USB_OTG_GINTSTS_SOF;

  USB_OTG_FS_GLOBAL->GINTMSK = USB_OTG_GINTMSK_MMISM
                             | USB_OTG_GINTMSK_OTGINT;

  USB_OTG_FS_DEVICE->DCFG = (0b11 << USB_OTG_DCFG_DSPD_Pos);
                          // TODO | USB_DCFG_NZLSOHSK ???
  USB_OTG_FS_GLOBAL->GINTMSK |= USB_OTG_GINTMSK_USBRST
                              | USB_OTG_GINTMSK_ENUMDNEM
                              | USB_OTG_GINTMSK_ESUSPM
                              | USB_OTG_GINTMSK_USBSUSPM
                       //       | USB_OTG_GINTMSK_SOFM
                              | USB_OTG_GINTMSK_SRQIM
                              | USB_OTG_GINTMSK_DISCINT;

 /* set PA9 VBUS function to INPUT (NOT VBUS AF) */
  GPIO_MODE_IN(USB_VBUSREG, USB_VBUSBIT);
  GPIO_PULLNONE(USB_VBUSREG, USB_VBUSBIT);

  /* PA12 D+, PA11 D- */
  GPIO_SEL_AF(USB_DPLUSREG, USB_DPLUSBIT, 10);
  GPIO_SEL_AF(USB_DMINUSREG, USB_DMINUSBIT, 10);
  GPIO_MODE_AF(USB_DPLUSREG, USB_DPLUSBIT);
  GPIO_MODE_AF(USB_DMINUSREG, USB_DMINUSBIT);

  GPIO_SPEED(USB_DPLUSREG, USB_DPLUSBIT, IO_SPEED_VH);
  GPIO_SPEED(USB_DMINUSREG, USB_DMINUSBIT, IO_SPEED_VH);

  //USB_Connect(1);

  printf("USB connect\n");
  USB_EnableIRQ();               /* enable USB interrupt */
  USB_SetAddress(0);
}

void USB_Connect (uint32_t con) {
  if(con) {
    USB_OTG_FS_GLOBAL->GCCFG |= USB_OTG_GCCFG_VBUSBSEN;
    USB_OTG_FS_DEVICE->DCTL &= ~USB_OTG_DCTL_SDIS;
  } else {
    USB_OTG_FS_GLOBAL->GCCFG &= ~(USB_OTG_GCCFG_VBUSBSEN);
    USB_OTG_FS_DEVICE->DCTL |= USB_OTG_DCTL_SDIS;
  }
}

void USB_Reset (uint16_t max_size) {
  /* enable auto NAK for all endpoints (including unused) */
  for(int i = 0; i < 4; i++) {
    USB_OTG_FS_EP->OUT_Endpoint[i].DOEPCTL |= USB_OTG_DOEPCTL_SNAK;
  }

  /* enable IRQs for IN/OUT Endpoints 0 */
  USB_OTG_FS_DEVICE->DAINTMSK = (1 << (/*INEP*/  0 + USB_OTG_DAINTMSK_IEPM_Pos))
                               |(1 << (/*OUTEP*/ 0 + USB_OTG_DAINTMSK_OEPM_Pos));

  /* enable SETUP, Transfer Complete, and Timeout Interrupts */
  USB_OTG_FS_DEVICE->DOEPMSK |= USB_OTG_DOEPMSK_XFRCM | USB_OTG_DOEPMSK_STUPM;
  USB_OTG_FS_DEVICE->DIEPMSK |= USB_OTG_DIEPMSK_XFRCM | USB_OTG_DIEPMSK_TOM;

  /* set FIFO transfer sizes:
     - global OUT/SETUP RX FIFO: 64 words; must be sufficient for ALL OUT EPs
     - EP0 IN TX FIFO: 16 words, starting at 64 words offset (directly after RX FIFO)
  */
  USB_OTG_FS_GLOBAL->GRXFSIZ = USB_RXFIFO_SIZE;
  USB_OTG_FS_GLOBAL->DIEPTXF0_HNPTXFSIZ = (USB_EP0_TXFIFO_SIZE << USB_OTG_TX0FD_Pos)
                                         |(USB_RXFIFO_SIZE << USB_OTG_TX0FSA_Pos);

  /* setup OUT EP0 to receive 1 SETUP packet */
  doeptsiz[0] = USB_OTG_FS_EP->OUT_Endpoint[0].DOEPTSIZ = (1 << USB_OTG_DOEPTSIZ_STUPCNT_Pos)
                                                        | USB_MAX_PACKET0;

  /* set default address */
  USB_SetAddress(0);

  USB_OTG_FS_GLOBAL->GINTMSK |= (USB_OTG_GINTMSK_IEPINT /*| USB_OTG_GINTMSK_OEPINT */);
  USB_OTG_FS_GLOBAL->GINTMSK |= USB_OTG_GINTMSK_RXFLVLM;

  uint32_t mpsiz;
  if(max_size >= 64) {
    mpsiz = USB_OTG_DIEPCTL0_MPSIZ_64;
  } else if (max_size >= 32) {
    mpsiz = USB_OTG_DIEPCTL0_MPSIZ_32;
  } else if (max_size >= 16) {
    mpsiz = USB_OTG_DIEPCTL0_MPSIZ_16;
  } else {
    mpsiz = USB_OTG_DIEPCTL0_MPSIZ_8;
  }
  USB_OTG_FS_EP->IN_Endpoint[0].DIEPCTL = mpsiz;

  USB_OTG_FS_EP->IN_Endpoint[0].DIEPTSIZ = (max_size << USB_OTG_DIEPTSIZ_XFRSIZ_Pos) & USB_OTG_DIEPTSIZ0_XFRSIZ_Msk;
  USB_OTG_FS_EP->OUT_Endpoint[0].DOEPCTL |= USB_OTG_DOEPCTL_EPENA | USB_OTG_DOEPCTL_CNAK;
  USB_OTG_FS_EP->IN_Endpoint[0].DIEPCTL |= USB_OTG_DIEPCTL_EPENA | USB_OTG_DIEPCTL_SNAK;
}

void USB_SetAddress (uint32_t adr) {
  DBG_USBHW printf("USB_SetAddress 0x%02lx\n", adr);
  DBG_USBHW printf("%08lx -> %08lx\n", USB_OTG_FS_DEVICE->DCFG, (USB_OTG_FS_DEVICE->DCFG & ~(USB_OTG_DCFG_DAD_Msk))
                          | ((adr << (uint32_t)USB_OTG_DCFG_DAD_Pos) & USB_OTG_DCFG_DAD_Msk));
  USB_OTG_FS_DEVICE->DCFG = (USB_OTG_FS_DEVICE->DCFG & ~(USB_OTG_DCFG_DAD_Msk))
                          | ((adr << (uint32_t)USB_OTG_DCFG_DAD_Pos) & USB_OTG_DCFG_DAD_Msk);
//  USB_OTG_FS_DEVICE->DCFG = 0x00000143;
}

void USB_Configure (uint32_t cfg) {
  DBG_USBHW printf("NOIMPL USB_Configure\n");
  // XXX probably not required for STM32F4 USB_OTG_FS
}

void USB_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD) {
  uint32_t num;
  int isIn;

  num = pEPD->bEndpointAddress;
  isIn = (num & 0x80);
  num &= 0x0f;

  uint32_t mpsiz = (pEPD->wMaxPacketSize << USB_OTG_DIEPCTL_MPSIZ_Pos) & USB_OTG_DIEPCTL_MPSIZ_Msk;
  uint32_t eptyp = ((pEPD->bmAttributes & 0x3) << USB_OTG_DIEPCTL_EPTYP_Pos);
  uint32_t txfnum = (num << USB_OTG_DIEPCTL_TXFNUM_Pos);

  // DAINTMSK:
  // unmask EP IRQ
  USB_OTG_FS_DEVICE->DAINTMSK |= (isIn ? (1 << num) : ((1 << 16) << num));

  if(isIn) {
    /* setup FIFO for IN EPx:
       - start address: after RX FIFO + EP0 FIFO + n previous EPx FIFOs
       - size: generic TXFIFO size (64 words)
     */
    USB_OTG_FS_GLOBAL->DIEPTXF[num-1] = (USB_EPx_TXFIFO_SIZE << USB_OTG_DIEPTXF_INEPTXFD_Pos)
                                      | (USB_RXFIFO_SIZE + USB_EP0_TXFIFO_SIZE + (USB_EPx_TXFIFO_SIZE * (num-1)));
    DBG_USBHW printf("ConfigEP set DIEPTXF=%08lx\n", (USB_EPx_TXFIFO_SIZE << USB_OTG_DIEPTXF_INEPTXFD_Pos)
                                      | (USB_RXFIFO_SIZE + USB_EP0_TXFIFO_SIZE + (USB_EPx_TXFIFO_SIZE * (num-1))));
  // DxEPTSIZ:
  // set XFRSIZ
  // set PKTCNT
  // XXX probably do this on WriteEP only...
//    USB_OTG_FS_EP->IN_Endpoint[num].DIEPTSIZ = 


  // DxEPCTL:
  // set MPSIZ
  // set EPTYP
  // set CNAK
  // set TXFNUM (for IN EP)
  // set EPENA
  // set USBAEP

    USB_OTG_FS_EP->IN_Endpoint[num].DIEPCTL = mpsiz
                                            | eptyp
                                            | txfnum
                                            | USB_OTG_DIEPCTL_SNAK
                                            | USB_OTG_DIEPCTL_USBAEP;
  } else {
    USB_OTG_FS_EP->OUT_Endpoint[num].DOEPCTL = mpsiz
                                             | eptyp
                                             | USB_OTG_DOEPCTL_CNAK
                                             | USB_OTG_DOEPCTL_EPENA
                                             | USB_OTG_DOEPCTL_USBAEP;

    doeptsiz[num] = USB_OTG_FS_EP->OUT_Endpoint[num].DOEPTSIZ = mpsiz
                                                              | USB_OTG_PKTCNT0(1);
  }
}

void USB_DisableEP (uint32_t EPNum) {
  uint8_t in = EPNum & 0x80;
  EPNum &= 0x0f;
  if(in) {
    USB_Flush_TXFIFO(EPNum);
    USB_OTG_FS_EP->IN_Endpoint[EPNum].DIEPCTL |= USB_OTG_DIEPCTL_EPDIS | USB_OTG_DIEPCTL_SNAK;
  } else {
    USB_OTG_FS_EP->OUT_Endpoint[EPNum].DOEPCTL |= USB_OTG_DOEPCTL_EPDIS | USB_OTG_DOEPCTL_SNAK;
  }
}

void USB_SetStallEP (uint32_t EPNum) {
  if(EPNum & 0x80) {
    USB_OTG_FS_EP->IN_Endpoint[EPNum & 0x0f].DIEPCTL |= USB_OTG_DIEPCTL_STALL;
  } else {
    USB_OTG_FS_EP->OUT_Endpoint[EPNum & 0x0f].DOEPCTL |= USB_OTG_DOEPCTL_STALL;
  }
}

uint32_t USB_ReadEP (uint32_t EPNum, uint8_t *pData) {
  /* on USB_OTG this only copies from EP soft buffer to target buffer.
     Data is already fetched by RX FIFO handler.
     TODO Try doing this without extra copy, e.g. by setting pointers only */

  DBG_USBHW printf("ReadEP ep=%ld, buff=%p, len=%d, data[0]=%02x\n", EPNum, epout[EPNum].buff, epout[EPNum].length, epout[EPNum].buff[0]);
  memcpy(pData, epout[EPNum].buff, epout[EPNum].length);
  return epout[EPNum].length;
}

uint32_t USB_WriteEP (uint32_t EPNum, uint8_t *pData, uint32_t cnt) {
  uint32_t cnt32 = (cnt + 3) / 4;
  uint32_t *pData32;
  uint32_t dtxfsts = USB_OTG_FS_EP->IN_Endpoint[EPNum & 0xf].DTXFSTS;
  DBG_USBHW printf("WriteEP ep=%ld data @%p, count=%ld cnt32=%ld\n", EPNum, pData,cnt,cnt32);
  EPNum &= 0xf;
  pData32 = (uint32_t *)pData;

  USB_OTG_FS_EP->IN_Endpoint[EPNum].DIEPTSIZ = (cnt & USB_OTG_DIEPTSIZ0_XFRSIZ_Msk)
                                              |(USB_OTG_PKTCNT0(1));
  USB_OTG_FS_EP->IN_Endpoint[EPNum].DIEPCTL |= USB_OTG_DIEPCTL_EPENA | USB_OTG_DIEPCTL_CNAK;
  DBG_USBHW printf("DTXFSTS=%08lx\n", dtxfsts);
  while((USB_OTG_FS_EP->IN_Endpoint[EPNum].DTXFSTS & USB_OTG_DTXFSTS_INEPTFSAV) < cnt32);

  while(cnt32--) {
    DBG_USBHW printf("tx %08lx\n", *pData32);
    USB_OTG_FS_FIFO->FIFO[EPNum].FIFOData[0] = *pData32++;
  }
  DBG_USBHW printf("DTXFSTS=%08lx\n", dtxfsts);
  return cnt;
}
