==> mrehkopf/sd2snes/src/lpc175x/usbhw.c <==
#include <arm/bits.h>
#include "config.h"
#include "uart.h"
#include "usb.h"
#include "usbcfg.h"
#include "usbreg.h"
#include "usbhw.h"
#include "usbcore.h"
#include "usbuser.h"
#define EP_MSK_CTRL 0x0001      /* Control Endpoint Logical Address Mask */
#define EP_MSK_BULK 0xC924      /* Bulk Endpoint Logical Address Mask */
#define EP_MSK_INT  0x4492      /* Interrupt Endpoint Logical Address Mask */
#define EP_MSK_ISO  0x1248      /* Isochronous Endpoint Logical Address Mask */

void USB_Init (void) {

  LPC_SC->PCONP |= (1UL<<31);                /* USB PCLK -> enable USB Per.       */

 /* disable pull-up on fake USB_CONNECT pin, set P1.30 function to VBUS */
  GPIO_MODE_AF(USB_VBUSREG, USB_VBUSBIT, 2);
  GPIO_PULLNONE(USB_VBUSREG, USB_VBUSBIT);
  GPIO_PULLNONE(USB_CONNREG, USB_CONNBIT);

  /* P0.29 D+, P0.30 D- */
  GPIO_MODE_AF(USB_DPLUSREG, USB_DPLUSBIT, 1);
  GPIO_MODE_AF(USB_DMINUSREG, USB_DMINUSBIT, 1);

  LPC_USB->USBClkCtrl = 0x12;                /* Dev, PortSel, AHB clock enable */
  while ((LPC_USB->USBClkSt & 0x12) != 0x12);
  NVIC_EnableIRQ(USB_IRQn);               /* enable USB interrupt */
  USB_Reset();
  USB_SetAddress(0);
  USB_CONNREG->FIOCLR = BV(USB_CONNBIT);
  BITBAND(USB_CONNREG->FIODIR, USB_CONNBIT) = 1;
}

void USB_Connect (uint32_t con) {
  WrCmdDat(CMD_SET_DEV_STAT, DAT_WR_BYTE(con ? DEV_CON : 0));
  if(con) {
    BITBAND(USB_CONNREG->FIOSET, USB_CONNBIT) = 1;
  } else {
    BITBAND(USB_CONNREG->FIOCLR, USB_CONNBIT) = 1;
  }
}

void USB_Reset (void) {
#if USB_DMA
  uint32_t n;
#endif

  LPC_USB->USBEpInd = 0;
  LPC_USB->USBMaxPSize = USB_MAX_PACKET0;
  LPC_USB->USBEpInd = 1;
  LPC_USB->USBMaxPSize = USB_MAX_PACKET0;
  while ((LPC_USB->USBDevIntSt & EP_RLZED_INT) == 0);

  LPC_USB->USBEpIntClr  = 0xFFFFFFFF;
  LPC_USB->USBEpIntEn   = 0xFFFFFFFF ^ USB_DMA_EP;
  
  //saturnu
//	LPC_USB->USBEpIntEn |= (1 << 4); //EP2RX
//	LPC_USB->USBEpIntEn |= (1 << 5); //EP2TX
  LPC_USB->USBDevIntClr = 0xFFFFFFFF;
  LPC_USB->USBDevIntEn  = DEV_STAT_INT    | EP_SLOW_INT     | //(1 << 6) | (1 << 7) |
               (USB_SOF_EVENT   ? FRAME_INT : 0) |
               (USB_ERROR_EVENT ? ERR_INT   : 0);

//enable 3 9 9 

//saturnu
//enable bulk in interrupt on nak
//  WrCmdDat(CMD_SET_MODE, DAT_WR_BYTE(INAK_BI));

//test call first interrupt manually and let in transaction interrupt fire the next one automatically

/* INAK_BI 0x20 bit 5
0 Only successful transactions generate an interrupt.
1 Both successful and NAKed IN transactions generate interrupts
*/


#if USB_DMA
  LPC_USB->USBUDCAH   = USB_RAM_ADR;
  LPC_USB->USBDMARClr = 0xFFFFFFFF;
  LPC_USB->USBEpDMADis  = 0xFFFFFFFF;
  LPC_USB->USBEpDMAEn   = USB_DMA_EP;
  LPC_USB->USBEoTIntClr = 0xFFFFFFFF;
  LPC_USB->USBNDDRIntClr = 0xFFFFFFFF;
  LPC_USB->USBSysErrIntClr = 0xFFFFFFFF;
  LPC_USB->USBDMAIntEn  = 0x00000007;
  DDMemMap[0] = 0x00000000;
  DDMemMap[1] = 0x00000000;
  for (n = 0; n < USB_EP_NUM; n++) {
    udca[n] = 0;
    UDCA[n] = 0;
  }
#endif
}

void USB_SetAddress (uint32_t adr) {
  WrCmdDat(CMD_SET_ADDR, DAT_WR_BYTE(DEV_EN | adr)); /* Don't wait for next */
  WrCmdDat(CMD_SET_ADDR, DAT_WR_BYTE(DEV_EN | adr)); /*  Setup Status Phase */
}

void USB_Configure (uint32_t cfg) {

  WrCmdDat(CMD_CFG_DEV, DAT_WR_BYTE(cfg ? CONF_DVICE : 0));

  LPC_USB->USBReEp = 0x00000003;
  while ((LPC_USB->USBDevIntSt & EP_RLZED_INT) == 0);
  LPC_USB->USBDevIntClr = EP_RLZED_INT;
}

void USB_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD) {
  uint32_t num;

  num = EPAdr(pEPD->bEndpointAddress);
  LPC_USB->USBReEp |= (1 << num);
  LPC_USB->USBEpInd = num;
  LPC_USB->USBMaxPSize = pEPD->wMaxPacketSize;
  while ((LPC_USB->USBDevIntSt & EP_RLZED_INT) == 0);
  LPC_USB->USBDevIntClr = EP_RLZED_INT;
}

void USB_DisableEP (uint32_t EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(EP_STAT_DA));
}

void USB_SetStallEP (uint32_t EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(EP_STAT_ST));
}

uint32_t USB_ReadEP (uint32_t EPNum, uint8_t *pData) {
  uint32_t cnt, n;

  LPC_USB->USBCtrl = ((EPNum & 0x0F) << 2) | CTRL_RD_EN;

  do {
    cnt = LPC_USB->USBRxPLen;
  } while ((cnt & PKT_RDY) == 0);
  cnt &= PKT_LNGTH_MASK;

  for (n = 0; n < (cnt + 3) / 4; n++) {
    *((uint32_t *)pData) = LPC_USB->USBRxData;
    pData += 4;
  }
  LPC_USB->USBCtrl = 0;

  if (((EP_MSK_ISO >> EPNum) & 1) == 0) {   /* Non-Isochronous Endpoint */
    WrCmdEP(EPNum, CMD_CLR_BUF);
  }

  return (cnt);
}

uint32_t USB_WriteEP (uint32_t EPNum, uint8_t *pData, uint32_t cnt) {
  uint32_t n;

  LPC_USB->USBCtrl = ((EPNum & 0x0F) << 2) | CTRL_WR_EN;

  LPC_USB->USBTxPLen = cnt;

  for (n = 0; n < (cnt + 3) / 4; n++) {
    LPC_USB->USBTxData = *((uint32_t *)pData);
    pData += 4;
  }
  LPC_USB->USBCtrl = 0;
  WrCmdEP(EPNum, CMD_VALID_BUF);
  return (cnt);
}
